cmake_minimum_required(VERSION 3.14)
project(adsb_sdn_plugin CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_library(adsb INTERFACE)
target_include_directories(adsb INTERFACE include)
add_executable(test_adsb tests/test_adsb.cpp)
target_link_libraries(test_adsb adsb)
enable_testing()
add_test(NAME adsb COMMAND test_adsb)

add_executable(test_sixdof tests/test_sixdof.cpp)
target_include_directories(test_sixdof PRIVATE include)
add_test(NAME adsb_sixdof COMMAND test_sixdof)
